  - Add a suffix to version (+) indicating non-release or development builds
  - Add an option to specify the contact details of the server administrator
    that shows in the status page of the server. The information is in the
    form of an OpenPGP KeyID and set by server_contact: in sksconf
  - Add a `sks version` command to provide information on the setup. 
  - Set the default pagesize for KDB to 65536 and for PTree to 4096. These 
    are the values recommended by Oracle's db_tuner utility.

1.1.3
  - Makefile fix for 'make dep' if .depend does not exist. Issue #4
  - Makefile fix: sks and sks_add_mail fail to link w/o '-ccopt -pg'
    Issue #23
  - Added -disable_mailsync and -disable_log_diffs to sks.pod 
  - Added file extensions .css, .jpeg, .htm, .es, .js, .xml, .shtml, .xhtm,
    .xhtml and associated MIME types to server code. Part of Issue #6
  - Added sample configuration files in sampleConfig directory
  - Added sample web page files in sampleWeb directory. Issues #7, 9, 19
  - Allow requests for non-official options hget, hash, status, & clean to 
    be preceded by '-x'. Closes issues #10, 11, 13, & 14. 
  - Allow &search with long subkey ID (16 digit) and subkey fingerprint
    subkey lookup was failing with other than a short key ID. However,
    public key lookup was working with short and long key ID and fingerprints.
    This patch makes subkey lookup behave the same as full key lookup.
    http://lists.gnupg.org/pipermail/gnupg-users/2012-January/043495.html
    Initial patch sumbitted by Dan McGee (dpmcgee@gmail.com).
    Cleanup by Yaron Minsky
  - Patch recon script so that POST includes HTTP version number.
    Patch submitted by Daniel Kahn Gilmor

1.1.2:
  - HTML generated by SKS has been cleaned up to pass XHTML 1.0 Strict
    without error or warnings
  - Added HTTP/1.0 after POST, '-' added to safe characters for webserver,
    Add '.html' (text/html) to list of supported file extensions for web server 