@@ -56,6 +56,18 @@ val cache_bytes : int option ref
 val set_cache_bytes : int -> unit
 val pagesize : int option ref
 val set_pagesize : int -> unit
+val keyid_pagesize : int option ref
+val set_keyid_pagesize : int -> unit
+val meta_pagesize : int option ref
+val set_meta_pagesize : int -> unit
+val subkeyid_pagesize : int option ref
+val set_subkeyid_pagesize : int -> unit
+val time_pagesize : int option ref
+val set_time_pagesize : int -> unit
+val tqueue_pagesize : int option ref
+val set_tqueue_pagesize : int -> unit
+val word_pagesize : int option ref
+val set_word_pagesize : int -> unit
 val ptree_cache_bytes : int option ref
 val set_ptree_cache_bytes : int -> unit
 val ptree_pagesize : int option ref
